first step add supervisor